--- a/components/plasmic/isv/PlasmicHomepage.module.css
+++ b/components/plasmic/isv/PlasmicHomepage.module.css
@@ -23,100 +23,6 @@
 .root > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
   margin-top: 5px;
 }
-.navigationBar:global(.__wab_instance) {
-  width: 100%;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-bottom: 0px;
-  max-width: 100%;
-  position: relative;
-  background: #0091ff;
-  margin-top: calc(0px + 5px) !important;
-  margin-right: 0px;
-  margin-left: 0px;
-  display: none;
-  padding: 16px;
-}
-.freeBox__bec60 {
-  flex-direction: row;
-  display: flex;
-  position: relative;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  min-width: 0;
-  padding: 8px;
-}
-.freeBox__bec60 > :global(.__wab_flex-container) {
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: stretch;
-  min-width: 0;
-  margin-left: calc(0px - 20px);
-  width: calc(100% + 20px);
-}
-.freeBox__bec60 > :global(.__wab_flex-container) > *,
-.freeBox__bec60 > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-.freeBox__bec60 > :global(.__wab_flex-container) > picture > img,
-.freeBox__bec60
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
-  margin-left: 20px;
-}
-.img__b9Nq {
-  position: relative;
-  object-fit: contain;
-  max-width: 100%;
-  width: 50px;
-  height: 50px;
-  flex-shrink: 0;
-}
-.img__b9Nq > picture > img {
-  object-fit: contain;
-}
-.img__b9Nq > .__wab_img-spacer > img {
-  object-fit: contain;
-}
-.text__rVvjr {
-  width: 100%;
-  height: auto;
-  max-width: 800px;
-  font-family: "Iceland";
-  font-size: 30px;
-  color: #ffffff;
-  min-width: 0;
-}
-.img___7Lbe0 {
-  object-fit: cover;
-}
-.img___7Lbe0 > picture > img {
-  object-fit: cover;
-}
-.img___7Lbe0 > .__wab_img-spacer > img {
-  object-fit: cover;
-}
-.link__pr2HP {
-  position: relative;
-  width: auto;
-  height: auto;
-  max-width: 800px;
-}
-.link___0S9RC {
-  position: relative;
-  width: auto;
-  height: auto;
-  max-width: 800px;
-}
-.link__jMcon {
-  position: relative;
-  width: auto;
-  height: auto;
-  max-width: 800px;
-}
 .freeBox__fhZpR {
   flex-direction: row;
   display: flex;
@@ -271,6 +177,11 @@
 .img___9EB9B > .__wab_img-spacer > img {
   object-fit: cover;
 }
+@media (min-width: 641px) {
+  .img___9EB9B {
+    max-width: 400px;
+  }
+}
 .separator__veGxi:global(.__wab_instance) {
   position: relative;
 }
@@ -282,16 +193,7 @@
   text-align: center;
   min-width: 0;
 }
-.orderItem__hq7V5:global(.__wab_instance) {
-  position: relative;
-}
-.orderItem__hjyHf:global(.__wab_instance) {
-  position: relative;
-}
-.separator__elFUv:global(.__wab_instance) {
-  position: relative;
-}
-.freeBox__waueD {
+.options {
   display: flex;
   position: relative;
   flex-direction: column;
@@ -303,22 +205,62 @@
   min-width: 0;
   padding: 8px;
 }
-.text__lNoFu {
+.orderItem__hq7V5:global(.__wab_instance) {
   position: relative;
+}
+.orderItem__hjyHf:global(.__wab_instance) {
+  position: relative;
+}
+.separator__elFUv:global(.__wab_instance) {
+  position: relative;
+  margin-top: calc(20px + 5px) !important;
+}
+.shoppingCart:global(.__wab_instance) {
+  position: relative;
+}
+.freeBox__a2Eq7 {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
   width: 100%;
   height: auto;
-  max-width: 800px;
+  max-width: 100%;
   min-width: 0;
+  padding: 8px 20px 8px 8px;
+}
+.text__nzQLq {
+  width: auto;
+  height: auto;
+  max-width: 800px;
+  font-size: 20px;
+}
+.freeBox__xeh4E {
+  width: auto;
+  height: auto;
+  max-width: 800px;
+  display: flex;
+  flex-direction: row;
+}
+.slotTargetTotalPrice {
+  font-size: 22px;
 }
 .button:global(.__wab_instance) {
-  max-width: 100%;
+  max-width: 80%;
   position: relative;
+  margin-top: calc(25px + 5px) !important;
+  width: 100%;
+  min-width: 0;
 }
 .svg__t1Vgb {
   position: relative;
   object-fit: cover;
   width: 1em;
   height: 1em;
+}
+.text__xwAkv {
+  font-size: 18px;
 }
 .svg___8KfTg {
   position: relative;
