--- a/components/plasmic/isv/PlasmicButton.module.css
+++ b/components/plasmic/isv/PlasmicButton.module.css
@@ -89,7 +89,7 @@
   padding: 0px;
 }
 .rootcolor_blue {
-  background: #0091ff;
+  background: var(--token-0kI3JlBolqyCq);
 }
 .rootshape_round_size_compact {
   padding: 6px;
