Fix featuredImage styles

--- a/components/plasmic/isv/PlasmicHomepage.module.css
+++ b/components/plasmic/isv/PlasmicHomepage.module.css
@@ -69,7 +69,7 @@
   height: auto;
   max-width: 100%;
   min-width: 0;
-  padding: 8px;
+  padding: 8px 0px;
 }
 .freeBox__wFFs9 > :global(.__wab_flex-container) {
   flex-direction: column;
