--- a/components/plasmic/isv/PlasmicQuantity.module.css
+++ b/components/plasmic/isv/PlasmicQuantity.module.css
@@ -9,14 +9,14 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  margin-left: calc(0px - 10px);
-  width: calc(100% + 10px);
+  margin-left: calc(0px - 20px);
+  width: calc(100% + 20px);
 }
 .root > :global(.__wab_flex-container) > *,
 .root > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
 .root > :global(.__wab_flex-container) > picture > img,
 .root > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
-  margin-left: 10px;
+  margin-left: 20px;
 }
 .minusButton:global(.__wab_instance) {
   max-width: 100%;
@@ -43,23 +43,17 @@
   width: 1em;
   height: 1em;
 }
-.textInput:global(.__wab_instance) {
-  max-width: 100%;
+.freeBox {
   position: relative;
-  width: 50px;
-  flex-shrink: 0;
+  width: 100%;
+  height: auto;
+  max-width: 800px;
+  display: flex;
+  flex-direction: row;
+  min-width: 0;
 }
-.svg__aiEnG {
-  position: relative;
-  object-fit: cover;
-  width: 1em;
-  height: 1em;
-}
-.svg__jwq48 {
-  position: relative;
-  object-fit: cover;
-  width: 1em;
-  height: 1em;
+.slotTargetQuantity {
+  font-size: 18px;
 }
 .plusButton:global(.__wab_instance) {
   max-width: 100%;
