--- a/components/plasmic/isv/PlasmicHomepage.module.css
+++ b/components/plasmic/isv/PlasmicHomepage.module.css
@@ -269,6 +269,8 @@
   max-width: 100%;
   object-fit: cover;
   position: relative;
+  width: 100%;
+  min-width: 0;
 }
 .cartButton:global(.__wab_instance) {
   position: fixed;
