--- a/components/plasmic/isv/PlasmicMenuItem.module.css
+++ b/components/plasmic/isv/PlasmicMenuItem.module.css
@@ -69,7 +69,7 @@
   height: auto;
   max-width: 100%;
   min-width: 0;
-  padding: 8px 20px;
+  padding: 8px 10px 8px 20px;
 }
 .freeBox___0YXaw {
   flex-direction: row;
@@ -101,16 +101,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 35%;
+  width: 30%;
   height: 100%;
   max-width: 150px;
-  min-width: 35%;
+  min-width: 30%;
   min-height: 0;
   padding: 0px;
 }
 .img {
   object-fit: cover;
   width: 100%;
+  height: 80%;
   min-width: 0;
   border-radius: 20%;
 }
@@ -147,6 +148,9 @@
   > picture
   > img {
   margin-top: 15px;
+}
+.slotTargetDescription {
+  font-size: 14px;
 }
 .slotTargetPrice {
   color: var(--token-0nux_H4urWELK);
