--- a/components/plasmic/isv/PlasmicShoppingCart.module.css
+++ b/components/plasmic/isv/PlasmicShoppingCart.module.css
@@ -111,11 +111,9 @@
   position: relative;
 }
 .freeBox__avSb {
+  flex-direction: column;
   display: flex;
   position: fixed;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
   width: 100%;
   height: auto;
   max-width: 100%;
@@ -126,6 +124,24 @@
   box-shadow: 0px -2px 16px 0px #00000033;
   min-width: 0;
   padding: 8px;
+}
+.freeBox__avSb > :global(.__wab_flex-container) {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 0;
+  margin-top: calc(0px - 10px);
+  height: calc(100% + 10px);
+}
+.freeBox__avSb > :global(.__wab_flex-container) > *,
+.freeBox__avSb > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox__avSb > :global(.__wab_flex-container) > picture > img,
+.freeBox__avSb
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-top: 10px;
 }
 .freeBox__bZiN9 {
   display: flex;
@@ -170,20 +186,25 @@
   height: auto;
   max-width: 100%;
   min-width: 0;
-  padding: 8px 20px;
+  padding: 8px;
 }
 .freeBoxisEmpty__dhXtSyqkGv {
   align-items: center;
   justify-content: center;
 }
 .backBtn:global(.__wab_instance) {
-  max-width: 100%;
+  max-width: 160px;
+  width: 100%;
+  min-width: 0;
 }
 .svg {
   position: relative;
   object-fit: cover;
   width: 1em;
   height: 1em;
+}
+.text___528Rb {
+  font-size: 14px;
 }
 .svg___3T3Dd {
   position: relative;
@@ -192,7 +213,9 @@
   height: 1em;
 }
 .checkoutBtn:global(.__wab_instance) {
-  max-width: 100%;
+  max-width: 160px;
+  width: 100%;
+  min-width: 0;
 }
 .checkoutBtnisEmpty:global(.__wab_instance) {
   display: none;
@@ -202,6 +225,9 @@
   object-fit: cover;
   width: 1em;
   height: 1em;
+}
+.text__nNaap {
+  font-size: 14px;
 }
 .svg__djAh {
   position: relative;
