--- a/components/plasmic/isv/PlasmicShoppingCart.module.css
+++ b/components/plasmic/isv/PlasmicShoppingCart.module.css
@@ -122,6 +122,7 @@
   bottom: 0px;
   z-index: 1;
   box-shadow: 0px -2px 16px 0px #00000033;
+  background: #ffffff;
   min-width: 0;
   padding: 8px;
 }
